# Gomoku

./: .gitignore  CMakeLists.txt  readme.md
include/: CMakeLists.txt  Game.h
include/common/: Common.h  PresentationMapper.h  RunManager.h  Time.h
include/logic/: Board.h  GameService.h  IGameService.h
include/logic/DTO/: CommandDTOs.h
include/logic/interfaces/: IBoardEventListener.h  IGameEventListener.h  IGameService.h  IMenuEventListener.h
include/logic/mapping/: MapLogicToModel.h  MapLogicToView.h
include/logic/player/: AIPlayer.h  HumanPlayer.h  IPlayer.h
include/persistence/: BoardEntity.h  FileManager.h  GameEntity.h  GameStateEntity.h  Models.h  MoveEntity.h  PlayerEntity.h
include/persistence/DTO/: PersistenceResultDTOs.h
include/persistence/interfaces/: IPersistenceManager.h
include/persistence/mapping/: MapPersistenceToLogic.h
include/presentation/DTO/: ViewModelDTOs.h
include/presentation/assets/: AssetManager.h
include/presentation/input/: Input.h  InputDefs.h
include/presentation/mapping/: MapPresentationToCommand.h  MapViewToCommand.h
include/presentation/renderer/: Animator.h  Batch.h  DefaultFont.h  Font.h  IndexBuffer.h  KikanFont.h  Renderer.h  Shader.h  Shaders.h  Texture2D.h  Vertex.h  VertexBufferLayout.h  Window.h
include/presentation/renderer/animator/: Animator.h  BackgroundAnimator.h  SimpleAnimator.h
include/presentation/renderer/buffer/: Vertex.h  VertexBuffer.h
include/presentation/renderer/font/: Font.h  GomokuFont.h
include/presentation/ui/: BackgroundView.h  BoardView.h  Button.h  DifficultyMenuView.h  DrawerView.h  GameMenuView.h  IInteractable.h  IViewable.h  MainMenuView.h  MenuButton.h  MenuController.h  ModeMenuView.h  Sprite.h  StatsMenuView.h  UI.h  View.h
include/presentation/ui/components/: Button.h  DrawerView.h  IInteractable.h  IViewable.h  Label.h  MenuView.h  ShaderSprite.h  Sprite.h  View.h
res/: Buttons.aseprite  black_stone.aseprite  black_stone_hover.aseprite  board_background.aseprite  board_grid.aseprite  diagonal_right_down.aseprite  nav_toggle.aseprite  new_game.aseprite  test.aseprite  white_stone.aseprite  white_stone_hover.aseprite
shaders/: bg.frag  bgDraw.frag  bgStone.frag  bgWin.frag  board.vert  default.frag  default.vert  font.frag  grid.frag  stone.vert  stone2.vert
src/: CMakeLists.txt  Game.cpp  embed_res.cmake  embed_shaders.cmake  main.cpp
src/common/: PresentationMapper.cpp  RunManager.cpp  Time.cpp
src/logic/: Board.cpp  GameService.cpp
src/logic/mapping/: MapLogicToModel.cpp  MapLogicToView.cpp
src/logic/player/: AIPlayer.cpp  HumanPlayer.cpp
src/persistence/: FileManager.cpp  FileManager.h
src/persistence/mapping/: MapPersistenceToLogic.cpp
src/presentation/assets/: AssetManager.cpp
src/presentation/input/: Input.cpp
src/presentation/mapping/: MapPresentationToCommand.cpp  MapViewToCommand.cpp
src/presentation/renderer/: Animator.cpp  Batch.cpp  Font.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  VertexBuffer.cpp  Window.cpp
src/presentation/renderer/animator/: Animator.cpp  BackgroundAnimator.cpp  SimpleAnimator.cpp
src/presentation/renderer/buffer/: IndexBuffer.cpp  Texture2D.cpp  VertexBuffer.cpp
src/presentation/ui/: BackgroundView.cpp  BoardView.cpp  Button.cpp  DifficultyMenuView.cpp  DrawerView.cpp  GameMenuView.cpp  Label.cpp  MainMenuView.cpp  MenuButton.cpp  MenuController.cpp  ModeMenuView.cpp  ShaderSprite.cpp  Sprite.cpp  StatsMenuView.cpp  UI.cpp  View.cpp  Viewable.cpp
src/presentation/ui/components/: Button.cpp  DrawerView.cpp  Label.cpp  MenuView.cpp  ShaderSprite.cpp  Sprite.cpp  View.cpp  Viewable.cpp
